fix: viewport height issue on mobile devices

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,8 +58,14 @@ html {
 }
 
 body {
-  min-height: 100%;
+  width: 100%;
+  /* For browsers that don't support CSS variables */
   min-height: 100vh;
+  /* This is the "polyfill" */
+  min-height: calc(var(--1dvh, 1vh) * 100);
+  /* This is for future browsers that support svh, dvh and lvh viewport units */
+  min-height: 100dvh;
+  height: 100%;
 }
 
 body {
